--- a/Notebooks/SacarMúsica/Creando_Datasets.ipynb
+++ b/Notebooks/SacarMúsica/Creando_Datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Creando_Datasets.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM9i+NH4uPx36juIwu1dJIN",
+      "authorship_tag": "ABX9TyNV68fACaGMh9zb8VHNBItT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -104,7 +104,7 @@
         "import re\r\n",
         "import music21 as m21"
       ],
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -115,6 +115,18 @@
       "source": [
         "%%capture\r\n",
         "pip install icevision[all]"
+      ],
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mhOZi4I6ZTTF"
+      },
+      "source": [
+        "%%capture\r\n",
+        "!pip install torchtext==0.8.1"
       ],
       "execution_count": 5,
       "outputs": []
@@ -127,7 +139,7 @@
       "source": [
         "from icevision.all import *"
       ],
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -149,7 +161,7 @@
         "  for cla in ini_Obras:\r\n",
         "    if num_obra in ini_Obras[cla]: return cla"
       ],
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -169,7 +181,7 @@
         "    cv2.rectangle(foto2, (x-150, y-2), (x + w + 150, y + h+2), (255, 255, 255), -1)\r\n",
         "  return foto2"
       ],
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -224,7 +236,7 @@
         "      cv2.rectangle(clone, (int(x1), int(y1)), (int(z1),int(w1)), (255, 0, 0), 2)\r\n",
         "    imagenDeImagen(clone,31,10)"
       ],
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -245,7 +257,7 @@
         "%%capture\r\n",
         "!wget https://www.dropbox.com/s/u2ekoltvu35kfjw/Fotos.zip?dl=1 -O Fotos.zip"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -257,7 +269,7 @@
         "%%capture\r\n",
         "!unzip Fotos.zip"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -277,7 +289,7 @@
         "with open(\"Obras.pickle\", \"rb\") as f:\r\n",
         "    Obras = pickle.load(f)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -293,7 +305,7 @@
         "  foto = cv2.cvtColor(foto,cv2.COLOR_BGR2RGB)\r\n",
         "  Pagina[cla] = foto"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -322,7 +334,7 @@
         "  S = S + len(pentagramas2[cla])\r\n",
         "S"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -346,7 +358,7 @@
       "source": [
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -364,7 +376,7 @@
         "    cv2.imwrite('/content/pentagramas/pent' + str(k) + '.jpg',pent)\r\n",
         "    k = k + 1"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -376,7 +388,7 @@
         "muestra = [i for i in range(1,k)]\r\n",
         "_, muestra, _, _, = train_test_split(muestra, muestra, test_size=0.13, random_state=42)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -391,7 +403,7 @@
       "source": [
         "len(muestra)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -419,7 +431,7 @@
       "source": [
         "print(muestra)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -449,7 +461,7 @@
         "%%capture\r\n",
         "!unzip Musica.zip"
       ],
-      "execution_count": 25,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -464,7 +476,7 @@
       "source": [
         "muestra[111] ## Toca la 111"
       ],
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -494,7 +506,7 @@
         "pent = cv2.cvtColor(pent,cv2.COLOR_BGR2RGB)\r\n",
         "cv2.imwrite('/content/Musica/pents/images/pent'+str(muestra[111])+'.jpg',pent)"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -584,7 +596,7 @@
         "import shutil\r\n",
         "shutil.make_archive('Musica', 'zip', '/content/Musica')"
       ],
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -623,7 +635,7 @@
       "source": [
         "files = get_files('/content/Musica/pents', folders = ['images'])"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -638,7 +650,7 @@
       "source": [
         "files.index(Path('/content/Musica/pents/images/pent'+str(muestra[110])+'.jpg')) # 111"
       ],
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -666,7 +678,7 @@
       "source": [
         "muestra[110] # 111"
       ],
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
