--- a/Notebooks/SacarMúsica/YOLO.ipynb
+++ b/Notebooks/SacarMúsica/YOLO.ipynb
@@ -33,7 +33,7 @@
         "!make\n",
         "!apt-get install tree"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -45,7 +45,7 @@
         "%%capture\n",
         "!wget https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.conv.137"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -58,7 +58,7 @@
         "!wget https://www.dropbox.com/s/pgy5ps3clel2p4b/celldataset.zip?dl=1 -O celldataset.zip\n",
         "!unzip celldataset.zip"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -73,7 +73,7 @@
       "source": [
         "!tree celldataset -L 2 -C"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,7 +134,7 @@
         "    plt.imshow(img2)\n",
         "    plt.show()\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,7 +150,7 @@
       "source": [
         "mostrarImagen('celldataset/train/images/eu-001-2-4.jpg')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -191,7 +191,7 @@
       "source": [
         "mostrarImagenConAnotacion('celldataset/train/images/eu-001-2-4.jpg','celldataset/train/images/eu-001-2-4.txt','celldataset/classes.names')"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -220,7 +220,7 @@
       "source": [
         "!cat celldataset/classes.names"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -239,7 +239,7 @@
       "source": [
         "#!cat celldataset/train.txt"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -250,7 +250,7 @@
       "source": [
         "#!cat celldataset/train.cfg"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -265,7 +265,7 @@
       "source": [
         "!cat celldataset/classes.data"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,7 +299,7 @@
       },
       "source": [
         "%%capture\n",
-        "!./darknet detector test cfg/coco.data celldataset/test.cfg backup/train_last.weights celldataset/train/images/eu-001-2-4.jpg"
+        "!./darknet detector test celldataset/classes.data celldataset/test.cfg backup/train_last.weights celldataset/train/images/eu-001-2-4.jpg"
       ],
       "execution_count": null,
       "outputs": []
@@ -308,16 +308,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "B5KQ_CIQ1Lkn",
-        "outputId": "32fb41fd-af0e-46a8-a334-6c9aed05041c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 268
-        }
+        },
+        "outputId": "32fb41fd-af0e-46a8-a334-6c9aed05041c"
       },
       "source": [
         "mostrarImagen('predictions.jpg')"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
