--- a/Notebooks/SacarMúsica/TutorialImportante.ipynb
+++ b/Notebooks/SacarMúsica/TutorialImportante.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "TutorialImportante.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNeEPtJW01Jlr+Y+FfMfWEU",
+      "authorship_tag": "ABX9TyMvIu0j3PcWO3rx6SZP7jvJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -128,7 +128,7 @@
         "%%capture\n",
         "!pip install icevision[all]==0.5.1"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -140,7 +140,7 @@
         "%%capture\n",
         "!pip install torchtext==0.8.1"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -152,7 +152,7 @@
         "%%capture\n",
         "!pip install fastai --upgrade"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -181,7 +181,7 @@
         "import json\n",
         "import music21 as m21"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -236,7 +236,7 @@
         "      cv2.rectangle(clone, (int(x1), int(y1)), (int(z1),int(w1)), (255, 0, 0), 2)\n",
         "    imagenDeImagen(clone,31,10)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -277,8 +277,155 @@
         "      cv2.rectangle(clone, (int(x1), int(y1)), (int(z1),int(w1)), (255, 0, 0), 2)\n",
         "    imagenDeImagen(clone,31,10)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z_KC316rQ_XD"
+      },
+      "source": [
+        "## midi2csv"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Rl-SqPVBRBC4",
+        "outputId": "23845551-7b70-458b-de4b-09f617391c99",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 257
+        }
+      },
+      "source": [
+        "fn = 'pent2300.mid'\n",
+        "midi_data = pretty_midi.PrettyMIDI(fn)\n",
+        "midi_list = []\n",
+        "\n",
+        "for instrument in midi_data.instruments:\n",
+        "    for note in instrument.notes:\n",
+        "        start = note.start\n",
+        "        end = note.end\n",
+        "        pitch = note.pitch\n",
+        "        velocity = note.velocity\n",
+        "        midi_list.append([start, end, pitch, velocity, 'Piano'])\n",
+        "        \n",
+        "midi_list = sorted(midi_list, key=lambda x: (x[0], x[2]))\n",
+        "\n",
+        "df = pd.DataFrame(midi_list, columns=['Start', 'End', 'Pitch', 'Velocity', 'Instrument'])\n",
+        "df.head(10)"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Start</th>\n",
+              "      <th>End</th>\n",
+              "      <th>Pitch</th>\n",
+              "      <th>Velocity</th>\n",
+              "      <th>Instrument</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0.00</td>\n",
+              "      <td>0.50</td>\n",
+              "      <td>69</td>\n",
+              "      <td>90</td>\n",
+              "      <td>Piano</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>0.50</td>\n",
+              "      <td>0.75</td>\n",
+              "      <td>71</td>\n",
+              "      <td>90</td>\n",
+              "      <td>Piano</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>0.75</td>\n",
+              "      <td>1.00</td>\n",
+              "      <td>72</td>\n",
+              "      <td>90</td>\n",
+              "      <td>Piano</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>1.00</td>\n",
+              "      <td>1.25</td>\n",
+              "      <td>71</td>\n",
+              "      <td>90</td>\n",
+              "      <td>Piano</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>1.25</td>\n",
+              "      <td>1.50</td>\n",
+              "      <td>69</td>\n",
+              "      <td>90</td>\n",
+              "      <td>Piano</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>1.50</td>\n",
+              "      <td>2.25</td>\n",
+              "      <td>69</td>\n",
+              "      <td>90</td>\n",
+              "      <td>Piano</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>2.25</td>\n",
+              "      <td>2.75</td>\n",
+              "      <td>68</td>\n",
+              "      <td>90</td>\n",
+              "      <td>Piano</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Start   End  Pitch  Velocity Instrument\n",
+              "0   0.00  0.50     69        90      Piano\n",
+              "1   0.50  0.75     71        90      Piano\n",
+              "2   0.75  1.00     72        90      Piano\n",
+              "3   1.00  1.25     71        90      Piano\n",
+              "4   1.25  1.50     69        90      Piano\n",
+              "5   1.50  2.25     69        90      Piano\n",
+              "6   2.25  2.75     68        90      Piano"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -298,7 +445,7 @@
         "%%capture\n",
         "!unzip Musica.zip"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -912,7 +1059,7 @@
       "source": [
         "learn_inf = load_learner('export.pkl')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -934,7 +1081,7 @@
         "ax.set_title(int(learn_inf.predict('/content/Musica/notas/9/nota1026-8-.jpg')[0]))\n",
         "plt.show()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1142,7 +1289,7 @@
         "muestra = [i for i in range(1,2309)]\n",
         "_, muestra, _, _, = train_test_split(muestra, muestra, test_size=0.13, random_state=42)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1157,7 +1304,7 @@
       "source": [
         "len(muestra)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1200,7 +1347,7 @@
         "ax.yaxis.set_ticklabels([])\n",
         "plt.show()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1258,7 +1405,7 @@
         "with open(\"notas.pickle\", \"wb\") as f:\n",
         "    notas = pickle.dump(notas,f)"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
