--- a/Notebooks/SacarMúsica/image2xml.ipynb
+++ b/Notebooks/SacarMúsica/image2xml.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "image2xml.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN1L6IGiL7jF3Yx3XGgCaV9",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyPd96FSwV+aFHy77jQpCJbM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -162,7 +163,7 @@
         "import json\n",
         "import music21 as m21"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -211,7 +212,7 @@
         "    assert iou <= 1.0\n",
         "    return iou"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -261,7 +262,7 @@
         "  \n",
         "  return L,labels,scores"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -303,7 +304,7 @@
         "      s.append(scores[i])\n",
         "  return b,l,s"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -366,7 +367,7 @@
         "%%capture\n",
         "altura_notas = load_learner('export.pkl')"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -385,11 +386,10 @@
         "id": "p2GHWeNv5yx8"
       },
       "source": [
-        "  claves = {'claves':{-4:53, -3:55, -2:57, -1:59, 0:60, 1:62, 2:64, 3:65, 4:67, 5:69, 6:71, 7:72, 8:74, 9:76, 10:77, 11:79, 12:81, 13:83, 14:84},\n",
-        "            'clavef':{-4:33, -3:35, -2:36, -1:38, 0:40, 1:41, 2:43, 3:45, 4:47, 5:48, 6:50, 7:52, 8:53, 9:55, 10:57, 11:59, 12:60, 13:62, 14:64},\n",
-        "#Cambiar clave de do            'claved':{-4:33, -3:35, -2:36, -1:38, 0:40, 1:41, 2:43, 3:45, 4:47, 5:48, 6:50, 7:52, 8:53, 9:55, 10:57, 11:59, 12:60, 13:62, 14:64}}"
+        "  claves = {'claves':{-4:'F3', -3:'G3', -2:'A3', -1:'B3', 0:'C4', 1:'D4', 2:'E4', 3:'F4', 4:'G4', 5:'A4', 6:'B4', 7:'C5', 8:'D5', 9:'E5', 10:'F5', 11:'G5', 12:'A5', 13:'B5', 14:'C6'},\n",
+        "            'clavef4':{-4:'A1', -3:'B1', -2:'C2', -1:'D2', 0:'E2', 1:'F2', 2:'G2', 3:'A2', 4:'B2', 5:'C3', 6:'D3', 7:'E3', 8:'F3', 9:'G3', 10:'A3', 11:'B3', 12:'C4', 13:'D4', 14:'E4'}}"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
