--- a/Notebooks/SacarMúsica/image2xml.ipynb
+++ b/Notebooks/SacarMúsica/image2xml.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "image2xml.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNHHb0Ic7ioOG1ckXnbptLN",
+      "authorship_tag": "ABX9TyMiv4PPRgcGpxp+MA1lvKzz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -391,7 +391,7 @@
         "%%capture\n",
         "pip install py_midicsv"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -403,7 +403,7 @@
         "%%capture\n",
         "pip install MIDIUtil"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -415,7 +415,7 @@
         "%%capture\n",
         "pip install pretty_midi"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -427,7 +427,7 @@
         "%%capture\n",
         "!pip install icevision[all]==0.5.1"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -439,7 +439,7 @@
         "%%capture\n",
         "!pip install torchtext==0.8.1"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -451,7 +451,7 @@
         "%%capture\n",
         "!pip install fastai --upgrade"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -466,7 +466,7 @@
         "!pip install pytesseract\n",
         "!pip install tesseract"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -499,7 +499,7 @@
         "import json\n",
         "import music21 as m21"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -521,7 +521,7 @@
         "!wget https://www.dropbox.com/s/u2ekoltvu35kfjw/Fotos.zip?dl=1 -O Fotos.zip\n",
         "!unzip Fotos.zip"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -535,7 +535,7 @@
         "with open(\"ini_Obras.pickle\", \"rb\") as f:\n",
         "    ini_Obras = pickle.load(f)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -552,7 +552,27 @@
         "  ax.yaxis.set_ticklabels([])\n",
         "  plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PznlFoBzDrUk"
+      },
+      "source": [
+        "import xml.etree.ElementTree as ET\n",
+        "from xml.dom import minidom\n",
+        "\n",
+        "\n",
+        "def prettify(elem):\n",
+        "    \"\"\"Return a pretty-printed XML string for the Element.\n",
+        "    \"\"\"\n",
+        "    rough_string = ET.tostring(elem, 'utf-8')\n",
+        "    reparsed = minidom.parseString(rough_string)\n",
+        "    return reparsed.toprettyxml(indent=\"  \")"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -589,7 +609,7 @@
         "    assert iou <= 1.0\n",
         "    return iou"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -631,7 +651,7 @@
         "      s.append(scores[i])\n",
         "  return b,l,s"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -682,7 +702,7 @@
         "  \n",
         "  return remove_notas(L,labels,scores)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -767,7 +787,7 @@
         "\n",
         "  return data"
       ],
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -804,7 +824,7 @@
         "      pents.append((x-5,y-5,w+5,h+5))\n",
         "  return pents[::-1]"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -832,7 +852,7 @@
         "      cv2.rectangle(foto2, (x, y), (x + w, y + h), (255,255,255), -1)\n",
         "  return foto2"
       ],
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -866,7 +886,7 @@
         "      bloques.append((x,y,w,h))\n",
         "  return bloques[::-1]"
       ],
-      "execution_count": 97,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -890,7 +910,7 @@
         "      cv2.rectangle(foto2, (x, y-3), (x + w, y + h+3), (255,255,255), -1)\n",
         "  return foto2"
       ],
-      "execution_count": 108,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -921,7 +941,7 @@
         "state_dict = torch.load('mejor.pth')\n",
         "detector = faster_rcnn.model(num_classes=35)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -936,7 +956,7 @@
       "source": [
         "detector.load_state_dict(state_dict)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -970,7 +990,7 @@
         "%%capture\n",
         "altura_notas = load_learner('export.pkl')"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1005,7 +1025,7 @@
         "Obra = np.concatenate(Obra,axis=0)\n",
         "mostrarImagen(Obra)"
       ],
-      "execution_count": 110,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1052,7 +1072,7 @@
       "source": [
         "data = image2data(Obra)"
       ],
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1100,7 +1120,7 @@
       "source": [
         "print(data)"
       ],
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1133,7 +1153,7 @@
         "          'claved3':{-4:'G2', -3:'A2', -2:'B2', -1:'C3', 0:'D3', 1:'E3', 2:'F3', 3:'G3', 4:'A3', 5:'B3', 6:'C4', 7:'D4', 8:'E4', 9:'F4', 10:'G4', 11:'A4', 12:'B4', 13:'C5', 14:'D5'},\n",
         "          'claved4':{-4:'E2', -3:'F2', -2:'G2', -1:'A2', 0:'B2', 1:'C3', 2:'D3', 3:'E3', 4:'F3', 5:'G3', 6:'A3', 7:'B3', 8:'C4', 9:'D4', 10:'E4', 11:'F4', 12:'G4', 13:'A4', 14:'B4'}}"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
