--- a/Notebooks/SacarMúsica/image2xml.ipynb
+++ b/Notebooks/SacarMúsica/image2xml.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "image2xml.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPf7nqOklY75lkOYQgj9q4b",
+      "authorship_tag": "ABX9TyM37jukpFSRAnrmLpiuoBXc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -391,7 +391,7 @@
         "%%capture\n",
         "pip install py_midicsv"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -403,7 +403,7 @@
         "%%capture\n",
         "pip install MIDIUtil"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -415,7 +415,7 @@
         "%%capture\n",
         "pip install pretty_midi"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -427,7 +427,7 @@
         "%%capture\n",
         "!pip install icevision[all]==0.5.1"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -439,7 +439,7 @@
         "%%capture\n",
         "!pip install torchtext==0.8.1"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -451,7 +451,7 @@
         "%%capture\n",
         "!pip install fastai --upgrade"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -466,7 +466,7 @@
         "!pip install pytesseract\n",
         "!pip install tesseract"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -499,7 +499,7 @@
         "import json\n",
         "import music21 as m21"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -521,7 +521,7 @@
         "!wget https://www.dropbox.com/s/u2ekoltvu35kfjw/Fotos.zip?dl=1 -O Fotos.zip\n",
         "!unzip Fotos.zip"
       ],
-      "execution_count": 8,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -535,7 +535,7 @@
         "with open(\"ini_Obras.pickle\", \"rb\") as f:\n",
         "    ini_Obras = pickle.load(f)"
       ],
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -552,7 +552,7 @@
         "  ax.yaxis.set_ticklabels([])\n",
         "  plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -572,7 +572,7 @@
         "    reparsed = minidom.parseString(rough_string)\n",
         "    return reparsed.toprettyxml(indent=\"  \")"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -609,7 +609,7 @@
         "    assert iou <= 1.0\n",
         "    return iou"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -651,7 +651,7 @@
         "      s.append(scores[i])\n",
         "  return b,l,s"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -702,7 +702,7 @@
         "  \n",
         "  return remove_notas(L,labels,scores)"
       ],
-      "execution_count": 7,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -796,7 +796,7 @@
         "\n",
         "  return data"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -833,7 +833,7 @@
         "      pents.append((x-5,y-5,w+5,h+5))\n",
         "  return pents[::-1]"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -861,7 +861,7 @@
         "      cv2.rectangle(foto2, (x, y), (x + w, y + h), (255,255,255), -1)\n",
         "  return foto2"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -895,7 +895,7 @@
         "      bloques.append((x,y,w,h))\n",
         "  return bloques[::-1]"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -919,7 +919,7 @@
         "      cv2.rectangle(foto2, (x, y-3), (x + w, y + h+3), (255,255,255), -1)\n",
         "  return foto2"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -950,7 +950,7 @@
         "state_dict = torch.load('mejor.pth')\n",
         "detector = faster_rcnn.model(num_classes=35)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -965,7 +965,7 @@
       "source": [
         "detector.load_state_dict(state_dict)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -999,7 +999,7 @@
         "%%capture\n",
         "altura_notas = load_learner('export.pkl')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1034,7 +1034,7 @@
         "Obra = np.concatenate(Obra,axis=0)\n",
         "mostrarImagen(Obra)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1081,7 +1081,7 @@
       "source": [
         "data = image2data(Obra)"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1549,7 +1549,7 @@
       "source": [
         "print(data)"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1588,12 +1588,51 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "E2u8qHfAIsd2"
+      },
+      "source": [
+        "def crear(dimension):\n",
+        "  score-partwise = ET.Element('score-partwise')\n",
+        "  score-partwise.set('version','3.1')\n",
+        "  defaults = ET.SubElement(score-partwise,'defaults')\n",
+        "  "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oxz2GpZmJhYE"
+      },
+      "source": [
+        "data = ET.Element('data')\n",
+        "items = ET.SubElement(data, 'items')\n",
+        "item1 = ET.SubElement(items, 'item')\n",
+        "item2 = ET.SubElement(items, 'item')\n",
+        "item1.set('name','item1')\n",
+        "item2.set('name','item2')\n",
+        "item1.text = 'item1abc'\n",
+        "item2.text = 'item2abc'\n",
+        "\n",
+        "# create a new XML file with the results\n",
+        "mydata = prettify(data)\n",
+        "with open(\"items2.xml\", \"w\") as myfile:\n",
+        "  myfile.write(mydata)"
+      ],
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "KyIpFuhtknAN"
       },
       "source": [
-        ""
+        "tree = ET.parse('plantilla.xml')\n",
+        "root = tree.getroot()\n"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     }
   ]
